--- a/structure_de.html
+++ b/structure_de.html
@@ -4,7 +4,7 @@
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>Trainings Structure</title>
+  <title>TRAININGSSTRUKTUR</title>
 
   <!-- Bootstrap CSS -->
   <link href="css/animate.css" rel="stylesheet">
@@ -27,19 +27,20 @@
         <div class="dropdown" style="position: absolute; top: 10px; right: 20px;">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <!-- This span will be used to display the selected language -->
-              <span id="selectedLanguage">English</span>
+              <span id="selectedLanguage">Deutsch</span>
           </button>
           <div class="dropdown-menu" aria-labelledby="languageDropdown">
-              <!-- <a class="dropdown-item" href="index.html">English</a> -->
-              <a class="dropdown-item" href="structure_de.html">Deutsch</a>
+              <a class="dropdown-item" href="structure.html">English</a>
+              <!-- <a class="dropdown-item" href="index_de.html">Deutsch</a> -->
           </div>
       </div>
-        <ul class="navbar-nav ml-auto">
-          <li class="nav-item"> <a class="nav-link" href="index.html">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="index.html#about-us">About</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="">Structure</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="index.html#contact">Contact</a> </li>
-        </ul>
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item"> <a class="nav-link" href="index_de.html">Home</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="index_de.html#about-us">Über</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="structure_de.html">Struktur</a> </li>
+        <li class="nav-item"> <a class="nav-link" href="index_de.html#contact">Kontakt</a> </li>
+        
+      </ul>
       </div>
     </div>
   </nav>
@@ -50,15 +51,15 @@
   <div class="container">
     <div class="row">
       <div class="col-md-12">
-        <h2 class="wow bounceInRight">TRAINING STRUCTURE</h2>
+        <h2 class="wow bounceInRight">TRAININGSSTRUKTUR</h2>
         <hr />
         <ul>
-          <li>1: Getting to know your goals and current status of your schedule (if any).</li>
-          <li> 2: Providing information about the process.</li>
-          <li> 3: Detailed queries regarding your goals.</li>
-          <li> 4: Providing custom made training and diet plan as per your requirements.</li>
-          <li> 5: Weekly/Bi-Weekly progress check.</li>
-          <li> 6: Improve/ Update your program as and when required.</li>
+          <li> 1: Kennenlernen Ihrer Ziele und des aktuellen Standes Ihres Zeitplans (falls vorhanden).</li>
+          <li> 2: Bereitstellung von Informationen zum Prozess.</li>
+          <li> 3: Detaillierte Abfragen zu Ihren Zielen.</li>
+          <li> 4: Bereitstellung eines maßgeschneiderten Trainings- und Ernährungsplans gemäß Ihren Anforderungen.</li>
+          <li> 5: Wöchentliche/Bi-wöchentliche Fortschrittskontrolle.</li>
+          <li> 6: Verbesserung/Aktualisierung Ihres Programms bei Bedarf.</li>
         </ul>
       </div>
     </div>
