--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <div class="dropdown" style="position: absolute; top: 10px; right: 20px;">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <!-- This span will be used to display the selected language -->
-              <span id="selectedLanguage">Language</span>
+              <span id="selectedLanguage">English</span>
           </button>
           <div class="dropdown-menu" aria-labelledby="languageDropdown">
-              <a class="dropdown-item" href="index.html">English</a>
+              <!-- <a class="dropdown-item" href="index.html">English</a> -->
               <a class="dropdown-item" href="index_de.html">Deutsch</a>
           </div>
       </div>
