--- a/index_de.html
+++ b/index_de.html
@@ -27,17 +27,17 @@
         <div class="dropdown" style="position: absolute; top: 10px; right: 20px;">
           <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <!-- This span will be used to display the selected language -->
-              <span id="selectedLanguage">Language</span>
+              <span id="selectedLanguage">Deutsch</span>
           </button>
           <div class="dropdown-menu" aria-labelledby="languageDropdown">
               <a class="dropdown-item" href="index.html">English</a>
-              <a class="dropdown-item" href="index_de.html">Deutsch</a>
+              <!-- <a class="dropdown-item" href="index_de.html">Deutsch</a> -->
           </div>
       </div>
         <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#about-us">Über</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="structure.html">Struktur</a> </li>
+          <li class="nav-item"> <a class="nav-link" href="structure_de.html">Struktur</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#contact">Kontakt</a> </li>
           
         </ul>
