--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
               <a class="dropdown-item" href="index_de.html">Deutsch</a>
           </div>
       </div>
-     <!--    <ul class="navbar-nav ml-auto">
+     <ul class="navbar-nav ml-auto">
           <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#about-us">About</a> </li>
           <li class="nav-item"> <a class="nav-link" href="structure.html">Structure</a> </li>
           <li class="nav-item"> <a class="nav-link" href="#contact">Contact</a> </li>
           <li class="nav-item"> <a class="nav-link" href="faq.html">FAQs</a> </li>
           
-        </ul> -->
+        </ul>
         <div id="navbar"></div>
       </div>
     </div>
@@ -232,9 +232,6 @@
   
   </script> -->
   <script>
-    $(function(){
-    $("#navbar").load("navigation.html"); 
-  });
     document.addEventListener("DOMContentLoaded", function() {
         // Determine the language based on the current page
         var lang = window.location.pathname.includes("index.html") || window.location.pathname === "/" ? "English" : "Deutsch";
