--- a/index.html
+++ b/index.html
@@ -24,26 +24,27 @@
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar"> <span class="navbar-toggler-icon"></span> </button>
       
       <!-- Navbar links -->
-      <div class="collapse navbar-collapse" id="collapsibleNavbar">
-        <div class="dropdown ml-auto">
-          <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <!-- This span will be used to display the selected language -->
-              <span id="selectedLanguage">English</span>
-          </button>
-          <div class="dropdown-menu" aria-labelledby="languageDropdown">
-              <!-- <a class="dropdown-item" href="index.html">English</a> -->
-              <a class="dropdown-item" href="index_de.html">Deutsch</a>
-          </div>
-      </div>
-     <ul class="navbar-nav ml-auto">
-          <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#about-us">About</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="structure.html">Structure</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="#contact">Contact</a> </li>
-          <li class="nav-item"> <a class="nav-link" href="faq.html">FAQs</a> </li>
-          
-        </ul>
-      </div>
+<!-- Navbar links -->
+<div class="collapse navbar-collapse" id="collapsibleNavbar">
+  <ul class="navbar-nav ml-auto">
+    <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
+    <li class="nav-item"> <a class="nav-link" href="#about-us">About</a> </li>
+    <li class="nav-item"> <a class="nav-link" href="structure.html">Structure</a> </li>
+    <li class="nav-item"> <a class="nav-link" href="#contact">Contact</a> </li>
+    <li class="nav-item"> <a class="nav-link" href="faq.html">FAQs</a> </li>
+  </ul>
+  <div class="dropdown ml-3">
+    <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        <!-- This span will be used to display the selected language -->
+        <span id="selectedLanguage">English</span>
+    </button>
+    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown">
+        <!-- <a class="dropdown-item" href="index.html">English</a> -->
+        <a class="dropdown-item" href="index_de.html">Deutsch</a>
+    </div>
+  </div>
+</div>
+
     </div>
   </nav>
   <div class="container">
