first commit to new branch

--- a/index.html
+++ b/index.html
@@ -17,9 +17,17 @@
     .parallax-window2 {
       background-attachment: fixed;
     }
-    .parallax-window{
-    
-    background-attachment: fixed;
+    .parallax-window {
+      background-attachment: fixed;
+    }
+    @media (max-width: 768px) {
+      .bg-img {
+        height: auto;
+      }
+      .quote-box {
+        padding-left: 15px;
+        padding-right: 15px;
+      }
     }
   </style>
 </head>
@@ -41,144 +49,139 @@
           <div class="dropdown ml-3">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span id="selectedLanguage">English</span>
-</button>
-<div class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown">
-  <a class="dropdown-item" href="index_de.html">Deutsch</a>
-</div>
-</div>
-</div>
-</div>
-</nav>
-<div class="container">
-<div class="fh5co-banner-text-box text-center">
-<div class="quote-box pl-5 pr-5 wow bounceInRight">
-<h2>Start your journey now!!</h2>
-</div>
-<a href="javascript:void(0)" class="btn text-uppercase btn-outline-danger btn-lg mr-3 mb-3 wow bounceInUp"> Testimonials</a>
-<a href="javascript:void(0)" class="btn text-uppercase btn-outline-danger btn-lg mb-3 wow bounceInDown" id="download-link"> Free Workout Template </a>
-</div>
-</div>
-</div>
+            </button>
+            <div class="dropdown-menu dropdown-menu-right" aria-labelledby="languageDropdown">
+              <a class="dropdown-item" href="index_de.html">Deutsch</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nav>
+    <div class="container">
+      <div class="fh5co-banner-text-box text-center">
+        <div class="quote-box pl-5 pr-5 wow bounceInRight">
+          <h2>Start your journey now!!</h2>
+        </div>
+        <a href="javascript:void(0)" class="btn text-uppercase btn-outline-danger btn-lg mr-3 mb-3 wow bounceInUp"> Testimonials</a>
+        <a href="javascript:void(0)" class="btn text-uppercase btn-outline-danger btn-lg mb-3 wow bounceInDown" id="download-link"> Free Workout Template </a>
+      </div>
+    </div>
+  </div>
 
-<div class="container-fluid fh5co-network">
-<div class="container">
-<div class="row">
-<div class="col-md-12">
-<h2 class="wow bounceInRight text-center">WHAT YOU WILL RECEIVE</h2>
-<hr />
-</div>
-</div>
-<div class="row">
-<div class="col-md-6">
-<div class="wow bounceInDown">
-<h3 class="wow bounceInRight">TRAINING</h3>
-<ul>
-  <li>Customized training plans tailored to your goals</li>
-  <li>High-intensity interval training for maximum results</li>
-  <li>Strength and conditioning sessions to build lean muscles</li>
-  <li>Progressive exercises to challenge you and keep you motivated</li>
-</ul>
-</div>
-</div>
-<div class="col-md-6">
-<div class="wow bounceInDown">
-<h3 class="wow bounceInRight">NUTRITION</h3>
-<ul>
-  <li>Customized nutrition plans tailored to your goals</li>
-  <li>Healthy meal options to support your workouts</li>
-  <li>Expert guidance on portion control and nutrient timing</li>
-  <li>Supportive community to help you stay accountable</li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</div>
+  <div class="container-fluid fh5co-network py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-12">
+          <h2 class="wow bounceInRight text-center">WHAT YOU WILL RECEIVE</h2>
+          <hr />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="wow bounceInDown">
+            <h3 class="wow bounceInRight">TRAINING</h3>
+            <ul>
+              <li>Customized training plans tailored to your goals</li>
+              <li>High-intensity interval training for maximum results</li>
+              <li>Strength and conditioning sessions to build lean muscles</li>
+              <li>Progressive exercises to challenge you and keep you motivated</li>
+            </ul>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="wow bounceInDown">
+            <h3 class="wow bounceInRight">NUTRITION</h3>
+            <ul>
+              <li>Customized nutrition plans tailored to your goals</li>
+              <li>Healthy meal options to support your workouts</li>
+              <li>Expert guidance on portion control and nutrient timing</li>
+              <li>Supportive community to help you stay accountable</li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<div id="about-us" class="container-fluid fh5co-about-us pl-0 pr-0 parallax-window" data-parallax="scroll" data-image-src="images/about-us-bg.jpg">
-<div class="container">
-<div class="col-lg-6 offset-lg-6">
-<h2 class="wow bounceInLeft" data-wow-delay=".25s">ABOUT ME</h2>
-<hr/>
-<p class="wow bounceInRight" data-wow-delay=".25s">Get ready to sculpt your dream figure and fuel your body for success! As your personal trainer, I'm here to push your limits and unlock your full potential. From intense workouts to customized nutrition plans, together we'll redefine what strength looks and feels like. Let's reach those goals and count every rep!!</p>
-</div>
-</div>
-</div>
+  <div id="about-us" class="container-fluid fh5co-about-us pl-0 pr-0 parallax-window" data-parallax="scroll" data-image-src="images/about-us-bg.jpg">
+    <div class="container">
+      <div class="row">
+        <div class="col-lg-6 offset-lg-6">
+          <h2 class="wow bounceInLeft" data-wow-delay=".25s">ABOUT ME</h2>
+          <hr />
+          <p class="wow bounceInRight" data-wow-delay=".25s">Get ready to sculpt your dream figure and fuel your body for success! As your personal trainer, I'm here to push your limits and unlock your full potential. From intense workouts to customized nutrition plans, together we'll redefine what strength looks and feels like. Let's reach those goals and count every rep!!</p>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<div class="container-fluid fh5co-content-box">
-<div class="container">
-<div class="row">
-<div class="col-md-5 pr-0">
-<img src="images/rode-gym.jpg" alt="gym" class="img-fluid wow bounceInLeft" />
-</div>
-<div class="col-md-7 pl-0">
-<div class="wow bounceInRight" data-wow-delay=".25s">
-<img src="images/gym-girls.jpg" alt="girls in gym" class="img-fluid" /> 
-</div>
-</div>
-</div>
-</div>
-</div>
+  <div class="container-fluid fh5co-content-box py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-5 pr-0">
+          <img src="images/rode-gym.jpg" alt="gym" class="img-fluid wow bounceInLeft" />
+        </div>
+        <div class="col-md-7 pl-0">
+          <div class="wow bounceInRight" data-wow-delay=".25s">
+            <img src="images/gym-girls.jpg" alt="girls in gym" class="img-fluid" />
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 
-<footer class="container-fluid">
-<div class="container">
-<div class="row">
-<div class="col-md-3 footer1 wow bounceInLeft" data-wow-delay=".25s">
-<div class="d-flex flex-wrap align-content-center">
-<p>Promote your body, nurture your soul: Where fitness and nutrition come together for a vibrant life.</p>
-<p>&copy; 2018 Foxpro. All rights reserved.<br> Design by <a href="https://freehtml5.co" target="_blank">FreeHTML5</a>.</p>
-</div>
-</div>
-<div class="col-md-6 footer2 wow bounceInUp" data-wow-delay=".25s" id="contact">
-<div class="form-box">
-<h4>CONTACT US</h4>
-<table class="table table-responsive">
-  <form id="contact-form" class="wow bounceInRight" data-wow-delay=".25s" action="https://formspree.io/f/xqkrodwa" method="POST">
-    <tr>
-      <td><input name="name" type="text" class="form-control pl-0" placeholder="NAME" /></td>
-      <td><input type="email" name="email" class="form-control pl-0" placeholder="EMAIL" /></td>
-    </tr>
-    <tr>
-      <td colspan="2"></td>
-    </tr>
-    <tr>
-      <td colspan="2"><input type="text" class="form-control pl-0" placeholder="ADDRESS" /></td>
-    </tr>
-    <tr>
-      <td colspan="2"></td>
-    </tr>
-    <tr>
-      <td colspan="2"><input type="text" name="message" class="form-control pl-0" placeholder="MESSAGE"></td>
-    </tr>
-    <tr>
-      <td colspan="2"></td>
-    </tr>
-    <tr>
-      <td colspan="2" class="text-center pl-0"><button type="submit" class="btn btn-dark">SEND</button></td>
-    </tr>
-  </form>
-</table>
-<div id="success-message" class="alert alert-success" role="alert" style="display:none;">
-  Your message has been sent successfully!
-</div>
-</div>
-</div>
-<div class="col-md-3 footer3 wow bounceInRight" data-wow-delay=".25s">
-<h5>PHONE</h5>
-<p>253232323232</p>
-<h5>EMAIL</h5>
-<p>ankitinhamburg@gmail.com</p>
-<div class="social-links">
-<ul class="nav">
-  <li class="nav-item"><a href="https://www.instagram.com/ankit.hamburg/" target="_blank" style="background-color: transparent;"><img src="images/instagram.png" alt="instagram" /></a></li>
-</ul>
-</div>
-</div>
-</div>
-</div>
-</footer>
+  <footer class="container-fluid py-5">
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3 footer1 wow bounceInLeft" data-wow-delay=".25s">
+          <div class="d-flex flex-wrap align-content-center">
+            <p>Promote your body, nurture your soul: Where fitness and nutrition come together for a vibrant life.</p>
+            <p>&copy; 2018 Foxpro. All rights reserved.<br> Design by <a href="https://freehtml5.co" target="_blank">FreeHTML5</a>.</p>
+          </div>
+        </div>
+        <div class="col-md-6 footer2 wow bounceInUp" data-wow-delay=".25s" id="contact">
+          <div class="form-box">
+            <h4>CONTACT US</h4>
+            <form id="contact-form" class="wow bounceInRight" data-wow-delay=".25s" action="https://formspree.io/f/xqkrodwa" method="POST">
+              <div class="form-row">
+                <div class="form-group col-md-6">
+                  <input name="name" type="text" class="form-control" placeholder="NAME" />
+                </div>
+                <div class="form-group col-md-6">
+                  <input type="email" name="email" class="form-control" placeholder="EMAIL" />
+                </div>
+              </div>
+              <div class="form-group">
+                <input type="text" class="form-control" placeholder="ADDRESS" />
+              </div>
+              <div class="form-group">
+                <input type="text" name="message" class="form-control" placeholder="MESSAGE" />
+              </div>
+              <div class="form-group text-center">
+                <button type="submit" class="btn btn-dark">SEND</button>
+              </div>
+            </form>
+            <div id="success-message" class="alert alert-success" role="alert" style="display:none;">
+              Your message has been sent successfully!
+            </div>
+          </div>
+        </div>
+        <div class="col-md-3 footer3 wow bounceInRight" data-wow-delay=".25s">
+          <h5>PHONE</h5>
+          <p>253232323232</p>
+          <h5>EMAIL</h5>
+          <p>ankitinhamburg@gmail.com</p>
+          <div class="social-links">
+            <ul class="nav">
+              <li class="nav-item"><a href="https://www.instagram.com/ankit.hamburg/" target="_blank" style="background-color: transparent;"><img src="images/instagram.png" alt="instagram" /></a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </div>
+  </footer>
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
   <script src="js/parallax.js"></script>
   <script src="js/wow.js"></script>
