--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <li class="nav-item"> <a class="nav-link" href="#about-us">About</a> </li>
             <li class="nav-item"> <a class="nav-link" href="structure.html">Structure</a> </li>
             <li class="nav-item"> <a class="nav-link" href="#contact">Contact</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="faq.html">FAQs</a> </li>
+            <!-- <li class="nav-item"> <a class="nav-link" href="faq.html">FAQs</a> </li> -->
           </ul>
           <div class="dropdown ml-3">
             <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
