read more added

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
   <li>High-intensity interval training for maximum results</li>
   <li>Strength and conditioning sessions to build lean muscles</li>
   <li>Progressive exercises to challenge you and keep you motivated</li>
+  <li><a href="training.html">...more</a></li>
 </ul>
 </div>
 </div>
@@ -88,6 +89,7 @@
   <li>Healthy meal options to support your workouts</li>
   <li>Expert guidance on portion control and nutrient timing</li>
   <li>Supportive community to help you stay accountable</li>
+  <li><a href="nutrition.html">...more</a></li>
 </ul>
 </div>
 </div>
@@ -100,7 +102,8 @@
 <div class="col-lg-6 offset-lg-6">
 <h2 class="wow bounceInLeft" data-wow-delay=".25s">ABOUT ME</h2>
 <hr/>
-<p class="wow bounceInRight" data-wow-delay=".25s">Get ready to sculpt your dream figure and fuel your body for success! As your personal trainer, I'm here to push your limits and unlock your full potential. From intense workouts to customized nutrition plans, together we'll redefine what strength looks and feels like. Let's reach those goals and count every rep!!</p>
+<p class="wow bounceInRight" data-wow-delay=".25s">Get ready to sculpt your dream figure and fuel your body for success! As your personal trainer, I'm here to push your limits and unlock your full potential. From intense workouts to customized nutrition plans, together we'll redefine what strength looks and feels like. Let's reach those goals and count every rep!! </p>
+
 </div>
 </div>
 </div>
