--- a/index.html
+++ b/index.html
@@ -8,23 +8,9 @@
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
-  <style>
-    .bg-img {
-      background-size: cover;
-      background-position: center;
-      height: 100vh;
-    }
-    .parallax-window2 {
-      background-attachment: fixed;
-    }
-    .parallax-window{
-    
-    background-attachment: fixed;
-    }
-  </style>
 </head>
 <body>
-  <div class="container-fluid pl-0 pr-0 bg-img clearfix parallax-window2" data-parallax="scroll" data-image-src="images/banner2.jpg">
+  <div class="container-fluid pl-0 pr-0 bg-img clearfix" data-parallax="scroll" data-image-src="images/banner2.jpg">
     <nav class="navbar navbar-expand-md navbar-dark">
       <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -97,7 +83,7 @@
 </div>
 </div>
 
-<div id="about-us" class="container-fluid fh5co-about-us pl-0 pr-0 parallax-window" data-parallax="scroll" data-image-src="images/about-us-bg.jpg">
+<div id="about-us" class="container-fluid fh5co-about-us pl-0 pr-0 parallax-window" data-parallax="scroll" src="images/about-us-bg.jpg">
 <div class="container">
 <div class="col-lg-6 offset-lg-6">
 <h2 class="wow bounceInLeft" data-wow-delay=".25s">ABOUT ME</h2>
@@ -225,8 +211,8 @@
       new WOW().init();
 
       // Initialize Parallax
-      $('.parallax-window2').parallax({ imageSrc: 'images/banner2.jpg' });
-      $('.parallax-window').parallax({ imageSrc: 'images/about-us-bg.jpg' });
+     /*  $('.parallax-window2').parallax({ imageSrc: 'images/banner2.jpg' });
+      $('.parallax-window').parallax({ imageSrc: 'images/about-us-bg.jpg' }); */
     });
   </script>
 </body>
