--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@
   <script src = "js/smoothscroll.js"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
+      new WOW().init();
       var scroll = new SmoothScroll('a[href*="#"]');
       var lang = window.location.pathname.includes("index.html") || window.location.pathname === "/" ? "English" : "Deutsch";
       //document.getElementById("selectedLanguage").textContent = lang;
