--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <div class="container-fluid pl-0 pr-0 bg-img clearfix" data-parallax="scroll" data-image-src="images/banner2.jpg">
-    <nav class="navbar navbar-expand-md navbar-dark">
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top">
       <div class="container">
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
           <span class="navbar-toggler-icon"></span>
@@ -22,7 +22,7 @@
           <ul class="navbar-nav ml-auto">
             <li class="nav-item"> <a class="nav-link" href="#">Home</a> </li>
             <li class="nav-item"> <a class="nav-link" href="#about-us">About</a> </li>
-            <li class="nav-item"> <a class="nav-link" href="structure.html">Structure</a> </li>
+            <li class="nav-item"> <a class="nav-link" href="process.html">Process</a> </li>
             <li class="nav-item"> <a class="nav-link" href="#contact">Contact</a> </li>
           </ul>
           <div class="dropdown ml-3">
@@ -178,21 +178,27 @@
       //document.getElementById("selectedLanguage").textContent = lang;
 
       const form = document.getElementById("contact-form");
-      form.addEventListener("submit", async function(event) {
-        event.preventDefault();
-        const formData = new FormData(form);
-        const response = await fetch(form.action, {
-          method: form.method,
-          body: formData,
-          headers: { 'Accept': 'application/json' }
-        });
-        if (response.ok) {
-          document.getElementById("success-message").style.display = "block";
-          form.reset();
-        } else {
-          alert("Oops! There was a problem submitting your form");
-        }
-      });
+form.addEventListener("submit", async function(event) {
+    event.preventDefault();
+    const formData = new FormData(form);
+    const response = await fetch(form.action, {
+        method: form.method,
+        body: formData,
+        headers: { 'Accept': 'application/json' }
+    });
+    if (response.ok) {
+        const successMessage = document.getElementById("success-message");
+        successMessage.style.display = "block";
+        form.reset();
+        
+        // Hide the success message after 5 seconds (5000 milliseconds)
+        setTimeout(() => {
+            successMessage.style.display = "none";
+        }, 5000);
+    } else {
+        alert("Oops! There was a problem submitting your form");
+    }
+});
 
       document.getElementById("download-link").addEventListener("click", function(event) {
         event.preventDefault();
