--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
   <link rel="stylesheet" href="css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/parallax-js@1.5.0/parallax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"></script>
+ <!--  <script type="text/javascript">
+    function googleTranslateElementInit() {
+      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
+    }
+  </script>
+  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
 </head>
 <body>
   <div class="container-fluid pl-0 pr-0 bg-img clearfix" data-parallax="scroll" data-image-src="images/banner2.jpg">
@@ -25,7 +31,9 @@
             <li class="nav-item"> <a class="nav-link" href="process.html">Process</a> </li>
             <li class="nav-item"> <a class="nav-link" href="#contact">Contact</a> </li>
           </ul>
+          
           <div class="dropdown ml-3">
+            <!-- <div id="google_translate_element" class="ml-3"></div> -->
  <!--            <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span id="selectedLanguage">English</span>
             </button> -->
