--- a/index.html
+++ b/index.html
@@ -97,38 +97,56 @@
       <div class="col-lg-6 offset-lg-6">
         <h2 class="wow bounceInLeft" data-wow-delay=".25s">ABOUT ME</h2>
         <hr/>
-        <p class="wow bounceInRight" data-wow-delay=".25s">Get ready to sculpt your dream figure and fuel your body for success! As your personal trainer, I'm here to push your limits and unlock your full potential. From intense workouts to customized nutrition plans, together we'll redefine what strength looks and feels like. Let's reach those goals and count every rep!! </p>
+        <p class="wow bounceInRight" data-wow-delay=".25s">Hello there, I am Ankit, an Indian living and loving in Germany. I am passionate about helping individuals achieve their fitness goals and lead healthier lifestyles. While I may be relatively new to the world of personal training, my journey in fitness started long ago.</p>
+
+          <p>As someone who has experienced firsthand the transformative power of fitness, I understand the challenges and triumphs that come with embarking on a wellness journey. From struggling with my own fitness goals to celebrating milestones and achievements, I've learned that every step of the journey is valuable.</p>
+          
+         <p> My approach to personal training is rooted in empathy, encouragement, and empowerment. I believe in creating personalized workout plans and nutrition strategies tailored to each individual's unique needs, goals, and preferences. Whether you're looking to lose weight, build muscle, improve endurance, or enhance overall health, I am here to guide and support you every step of the way.</p>
+
       </div>
     </div>
   </div>
 
-  <div class="container-fluid fh5co-content-box">
+<!--   <div class="container-fluid fh5co-content-box" style="background-image: url('images/rode-gym.jpg'); background-size: cover; background-position: center; opacity:.25;">
     <div class="container">
       <div class="row">
-        <div class="col-md-5 pr-0">
-          <img src="images/rode-gym.jpg" alt="gym" class="img-fluid wow bounceInLeft" />
+        <div class="col-md-5 pr-0" style="z-index: 2;">
+          <img src="images/ankit_gym.jpg" style="max-width: 100%; height: auto;  opacity:.8;  border-radius: 50%;" alt="gym" class="img-fluid wow bounceInLeft" />
         </div>
-        <div class="col-md-7 pl-0">
+        <div class="col-md-7 pl-0" style="z-index: 2;">
           <div class="wow bounceInRight" data-wow-delay=".25s">
-            <img src="images/gym-girls.jpg" alt="girls in gym" class="img-fluid" /> 
+            <img src="images/ankit_surfing.jpg" style="max-width: 85%; height:600px;  opacity: .8; border-radius: 50%;" alt="girls in gym" class="img-fluid" /> 
           </div>
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
+  <div class="container-fluid fh5co-content-box" style="position: relative; background-image: url('images/about-bg.jpg'); background-size: cover; background-position: center;">
+    <div class="container" >
+        <div class="row">
+            <div class="col-md-5 pr-0"">
+                <img src="images/ankit_gym.jpg" style="max-width: 100%; height: auto; opacity:.8; border-radius: 50%;" alt="gym" class="img-fluid wow bounceInLeft" />
+            </div>
+            <div class="col-md-7 pl-0">
+                <div class="wow bounceInRight" data-wow-delay=".25s">
+                    <img src="images/ankit_surfing.jpg" style="max-width: 85%; height:600px; opacity: .8; border-radius: 50%;" alt="girls in gym" class="img-fluid" /> 
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
   <footer class="container-fluid">
     <div class="container">
       <div class="row">
         <div class="col-md-3 footer1 wow bounceInLeft" data-wow-delay=".25s">
           <div class="d-flex flex-wrap align-content-center">
-            <p>Promote your body, nurture your soul: Where fitness and nutrition come together for a vibrant life.</p>
             <p>&copy; 2018 Foxpro. All rights reserved.<br> Design by <a href="https://freehtml5.co" target="_blank">FreeHTML5</a>.</p>
           </div>
         </div>
         <div class="col-md-6 footer2 wow bounceInUp" data-wow-delay=".25s" id="contact">
           <div class="form-box">
-            <h4>CONTACT US</h4>
+            <h4>CONTACT</h4>
             <table class="table table-responsive">
               <form id="contact-form" class="wow bounceInRight" data-wow-delay=".25s" action="https://formspree.io/f/xqkrodwa" method="POST">
                 <tr>
