--- a/index.html
+++ b/index.html
@@ -3,19 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Start your journey now!!</title>
+  <title data-translate="title">Start your journey now!!</title>
   <link href="css/animate.css" rel="stylesheet">
   <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://cdn.jsdelivr.net/npm/parallax-js@1.5.0/parallax.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"></script>
- <!--  <script type="text/javascript">
-    function googleTranslateElementInit() {
-      new google.translate.TranslateElement({pageLanguage: 'en'}, 'google_translate_element');
-    }
-  </script>
-  <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script> -->
+  <script src="js/pageScript.js" defer></script>
 </head>
 <body>
   <div class="container-fluid pl-0 pr-0 bg-img clearfix" data-parallax="scroll" data-image-src="images/banner2.jpg">
@@ -33,6 +28,8 @@
           </ul>
           
           <div class="dropdown ml-3">
+            <!-- <button onclick="setLanguage('en')">English</button>
+    <button onclick="setLanguage('de')">Deutsch</button> -->
             <!-- <div id="google_translate_element" class="ml-3"></div> -->
  <!--            <button class="btn btn-secondary dropdown-toggle" type="button" id="languageDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               <span id="selectedLanguage">English</span>
@@ -67,7 +64,7 @@
         <div class="col-md-6">
           <div class="wow bounceInDown">
             <h3 class="wow bounceInRight">TRAINING</h3>
-            <ul>
+            <ul data-translate="training">
               <li>Customized training plans tailored to your goals</li>
               <li>High-intensity interval training for maximum results</li>
               <li>Strength and conditioning sessions to build lean muscles</li>
@@ -106,21 +103,6 @@
       </div>
     </div>
   </div>
-
-<!--   <div class="container-fluid fh5co-content-box" style="background-image: url('images/rode-gym.jpg'); background-size: cover; background-position: center; opacity:.25;">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-5 pr-0" style="z-index: 2;">
-          <img src="images/ankit_gym.jpg" style="max-width: 100%; height: auto;  opacity:.8;  border-radius: 50%;" alt="gym" class="img-fluid wow bounceInLeft" />
-        </div>
-        <div class="col-md-7 pl-0" style="z-index: 2;">
-          <div class="wow bounceInRight" data-wow-delay=".25s">
-            <img src="images/ankit_surfing.jpg" style="max-width: 85%; height:600px;  opacity: .8; border-radius: 50%;" alt="girls in gym" class="img-fluid" /> 
-          </div>
-        </div>
-      </div>
-    </div>
-  </div> -->
   <div class="container-fluid fh5co-content-box" style="position: relative; background-image: url('images/about-bg.jpg'); background-size: cover; background-position: center;">
     <div class="container" >
         <div class="row">
@@ -197,46 +179,31 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/wow.js"></script>
   <script src = "js/smoothscroll.js"></script>
-  <script>
-    document.addEventListener("DOMContentLoaded", function() {
-      var scroll = new SmoothScroll('a[href*="#"]');
-      var lang = window.location.pathname.includes("index.html") || window.location.pathname === "/" ? "English" : "Deutsch";
-      //document.getElementById("selectedLanguage").textContent = lang;
 
-      const form = document.getElementById("contact-form");
-form.addEventListener("submit", async function(event) {
-    event.preventDefault();
-    const formData = new FormData(form);
-    const response = await fetch(form.action, {
-        method: form.method,
-        body: formData,
-        headers: { 'Accept': 'application/json' }
-    });
-    if (response.ok) {
-        const successMessage = document.getElementById("success-message");
-        successMessage.style.display = "block";
-        form.reset();
-        
-        // Hide the success message after 5 seconds (5000 milliseconds)
-        setTimeout(() => {
-            successMessage.style.display = "none";
-        }, 5000);
-    } else {
-        alert("Oops! There was a problem submitting your form");
-    }
-});
+<!--   <script>
+      const defaultLang = 'de';
+  function setLanguage(lang) {
+  
+   fetch('./json/translations.json') // Ensure the path is correct relative to index.html
+       .then(response => {
+           if (!response.ok) {
+               throw new Error('Network response was not ok ' + response.statusText);
+           }
+           return response.json();
+       })
+       .then(translations => {
+           document.querySelectorAll('[data-translate]').forEach(element => {
+               const key = element.getAttribute('data-translate');
+               if (translations[lang] && translations[lang][key]) {
+                   element.textContent = translations[lang][key];
+               }
+           });
+       })
+       .catch(error => console.error('Error loading translations:', error));
+}
 
-      document.getElementById("download-link").addEventListener("click", function(event) {
-        event.preventDefault();
-        const pdfUrl = "pdfs/schedule.pdf";
-        const link = document.createElement('a');
-        link.href = pdfUrl;
-        link.download = 'schedule.pdf';
-        document.body.appendChild(link);
-        link.click();
-        document.body.removeChild(link);
-      });
-    });
-  </script>
+setLanguage(defaultLang);
+  </script> -->
+
 </body>
 </html>
