--- a/login.html
+++ b/login.html
@@ -8,7 +8,7 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="css/style.css">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/smoothscroll/1.4.10/SmoothScroll.min.js"></script>
-  <script src="js/loginScript.js" defer></script>
+  <script src="./js/loginscript.js"></script>
 </head>
 <body>
   <div class="container mt-5">
